<resources>
    <string name="app_name">FTC_Scoring_App</string>
    <string name="action_settings">Settings</string>

    <string name="main_autonomous_label">Autonomous</string>
    <string name="main_autonomous_button">Calculate points during autonomous</string>
    <string name="main_driver_controlled_label">Driver-Controlled</string>
    <string name="main_driver_controlled_button">Calculate points during D.C.</string>
    <string name="main_current_total_label">Current Total:</string>
    <string name="main_current_total">0</string>
    <string name="main_penalty_label">Penalties</string>
    <string name="main_penalty_button">Calculate Penalties</string>

    <string name="current_total">Total:</string>

    <string name="autonomous_driveOffRamp_label_text">Drove off ramp ( 20 points ):</string>
    <string name="autonomous_ballsInCenterGoal_label"># of balls in center goal:</string>
    <string name="autonomous_ballsInGoal_label"># of balls in rolling goals:</string>
    <string name="autonomous_parkingZone_label"># of goals in the parking zone:</string>
    <string name="autonomous_hint">0</string>
    <string name="autonomous_current_total_hint">0</string>
    <string name="autonomous_dropKickstand_label">Drop Kickstand ( 30 points ):</string>

    <string name="driver_controlled_ballsInCenterGoal_label">Height of balls in center goal:</string>
    <string name="driver_controlled_ballsInLargeGoal_label">Height of balls in large goal: </string>
    <string name="driver_controlled_ballsInMediumGoal_label">Height of balls in medium goal:</string>
    <string name="driver_controlled_ballsInSmallGoal_label">Height of balls in small goal:</string>
    <string name="driver_controlled_parkingZone_label"># of goals/robots in the parking zone:</string>
    <string name="driver_controlled_ramp_label"># of goals/robots on the ramp:</string>
    <string name="driver_controlled_hint">0</string>
    <string name="driver_controlled_current_total_hint">0</string>

    <string name="penalty_minor_label"># of minor penalites:</string>
    <string name="penalty_major_label"># of major penalties:</string>
    <string name="penalty_hint">0</string>
</resources>
