<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_autonomous_label"
        style="?android:listSeparatorTextViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_autonomous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_autonomous_button" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_driver_controlled_label"
        style="?android:listSeparatorTextViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_driver_controlled_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_driver_controlled_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_current_total_label" />

        <EditText
            android:id="@+id/main_current_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/main_current_total"
            android:enabled="false" />
    </LinearLayout>

</LinearLayout>