<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/driver_controlled_title"
        style="?android:listSeparatorTextViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_controlled_ballsInCenterGoal_label" />

        <EditText
            android:id="@+id/autonomous_centerGoal_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_controlled_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_controlled_ballsInLargeGoal_label" />

        <EditText
            android:id="@+id/autonomous_largeGoal_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_controlled_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_controlled_ballsInMediumGoal_label" />

        <EditText
            android:id="@+id/autonomous_mediumGoal_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_controlled_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_controlled_ballsInSmallGoal_label" />

        <EditText
            android:id="@+id/autonomous_smallGoal_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_controlled_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_controlled_parkingZone_label" />

        <EditText
            android:id="@+id/autonomous_parkingZone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_controlled_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_controlled_ramp_label" />

        <EditText
            android:id="@+id/driver_controlled_ramp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_controlled_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_total" />

        <EditText
            android:id="@+id/autonomous_currentTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/driver_controlled_current_total_hint" />

    </LinearLayout>

</LinearLayout>